--- a/config-bot.cfg
+++ b/config-bot.cfg
@@ -47,7 +47,7 @@ debug=True
 debug_detail=False
 #la strat active
 strat_active = BOLLINGER
-#la strat active
+#exchange actif
 exchange_active = BITGET
 #delai req coin sec
 delay_coin = 1
