--- a/config-bot.cfg
+++ b/config-bot.cfg
@@ -18,11 +18,11 @@ secret =
 #Permettra au bot de vous indiquer combien vous avez gagné depuis que le bot tourne
 #Attention, indiquez le montant en USD, pas en EURO, convertisseur ici au besoin : https://tinyurl.com/bot-eur-to-usd
 #Attention, indiquez le montant avec des . et surtout pas des ,
-totalInvestment=16.0
+totalInvestment=50.0
 
 [MYSQL]
 #activé-desactivé
-mysql_active=True
+mysql_active=False
 #hote Mysql
 host=localhost
 #user Mysql
@@ -74,8 +74,8 @@ nb_tp = 1
 tp_1 = 0.05
 tp_2 = 0.10
 is_sl = True
-sl = 0.05
-maxOpenPosition = 4
+sl = 0.5
+maxOpenPosition = 3
 # soit long, soit short soit both
 type = both
 
@@ -92,3 +92,13 @@ bol_window=100
 bol_std=2.25
 min_bol_spread=0
 long_ma_window=500
+
+[STRAT.RANGE_1]
+name_strat=RANGE_1
+bol_window=100
+bol_std=2.25
+min_bol_spread=0
+kama_windows=10
+kama_pow1=2
+kama_pow2=30
+rsi_windows=14
